@@ -40,21 +40,21 @@ import urllib2
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-10855.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-10871.tgz',
      'xapian-core.tgz',
-     'c1b29ad3e815f477b1887066d61120efeb3d664e',
+     '741b4f1b300024f74682417d59a19956697614d4',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-10855.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-10871.tgz',
      'xapian-bindings.tgz',
-     '63b28828276301ce5ee145c3972c5a64d802c86a',
+     '30753c2a603560f6b0c3caf754782fa68f6f30c5',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-10855.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-10871.tgz',
      'win32msvc.tgz',
-     '9b95184fa86876d71e740548b5eb8682628aa1eb',
+     '79ef8b4cc67029c7fb346214dc61482254989d1e',
      'xapian-core/win32',
     ),
 )
