@@ -1,3 +1,10 @@
+Thu Jul 10 13:30:12 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/get_xapian.py: Updated versions of the tarballs (difference
+	  since the previous versions is some build system updates and a
+	  performance improvement).
+	* utils/make_xappy_tarballs: Update branchpoint version numbers.
+
 Wed Jul 09 15:12:40 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* libs/get_xapian.py: Yet another version, since the last one
